@@ -3,6 +3,9 @@
 ## Unversioned
 - Combined _test_step and _train_step into one function, _test_or_train_step.
 - Added test for checking that random data for test remains constant.
+- Removed experiment_name from TensorboardLogger.
+- Changed model output file name extension from .pt to .pth.
+- Changed rootdir behaviour for tensorboard logging.
 
 ## [0.1] - 2023-12-05
 - Code works for basic use. Tests implemented.
